--- a/package.json
+++ b/package.json
@@ -9,11 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.6.1",
+    "react-textarea-autosize": "^8.5.6",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "styled-components": "^6.1.13",
+    "uuid": "^11.0.3"
+    
   },
   "devDependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@headlessui/react": "^2.2.0",
+    "custom-cursor": "^2.2.4",
+    "gray-matter": "^4.0.3",
+    "gsap": "^3.12.5",
+    "next": "^15.1.3",
+    "next-themes": "^0.4.4",
+    "parse-numeric-range": "^1.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
